[gd_scene load_steps=2 format=2]

[ext_resource path="res://BirdSpawner.gd" type="Script" id=1]

[node name="BirdSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnBirdTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="OverallTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Tween" type="Tween" parent="."]

[node name="Birds" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_top = 48.0
margin_right = 182.0
margin_bottom = 113.0
text = "Keep moving to scare the crows away.
Move with WASD or Arrow Keys
Don't step on your plants!
How long can you keep everything alive?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = 10.0
margin_right = 25.0
margin_bottom = 60.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="SpawnBirdTimer" to="." method="_on_Spawn_Bird_Timer"]
[connection signal="timeout" from="OverallTimer" to="." method="_on_OverallTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
